fix(whatsapp): resolve interactive menu rendering and dynamic features routing
- Added missing section title required by Meta API for interactive list menus

- Implemented injectDynamicFeatures to append reserved UI features (SOS, Offer, Trust, About) to interactive menus

- Handled dynamic feature selection callbacks (get_about, get_trust, get_offer, get_support) with customizable configuration text and fallbacks